# club_rusjet

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  db-local.yaml  develop.yaml  pyproject.toml
.github/workflows/: deploy.yaml
Vesperr/: changelog.txt  index.html  inner-page.html  portfolio-details.html  test.css  test.html
Vesperr/assets/css/: style.css
Vesperr/assets/js/: main.js
Vesperr/forms/: Readme.txt
apps/club/: admin.py  apps.py  factories.py  models.py  urls.py  views.py
apps/club/migrations/: 0001_initial.py  0002_add_static_pages.py  (+10 more)
apps/equipment/: admin.py  factories.py  forms.py  models.py  urls.py  views.py
apps/general_page/: admin.py  apps.py  constants.py  mixins.py  models.py  urls.py  views.py
apps/main_page/: admin.py  apps.py  factories.py  mixins.py  models.py  urls.py  views.py
apps/news/: admin.py  factories.py  models.py  urls.py  views.py
apps/projects/: admin.py  apps.py  factories.py  models.py  urls.py  views.py
apps/questions/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/services/: admin.py  apps.py  factories.py  models.py  urls.py  views.py
config/: asgi.py  context_processors.py  urls.py  wsgi.py
config/settings/: base.py  develop.py  production.py
config/utils/: app_list.py  crontabs.py  image_change.py  youtube_links.py
deploy_infra/: deploy.service  product_deploy.yaml  swag_nginx.conf
requirements/: dev.txt  prod.txt
rusjet_main/: manage.py
rusjet_main/rusjet_main/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  changelog.txt  develop.html  index.html  inner-page.html  nav.html  portfolio-details.html  test.html
templates/admin/: base_site.html
templates/club/: achievements.html  history.html  history_achievements.html  members.html  performances.html
templates/equipment/: create_request.html  email.html  email.txt  equip_search_results.html  equipment-base.html  equipment-detail.html  equipment.html  equipments-brends.html  equipments-categories.html  equipments-detail.html  equipments-subcategories.html  equipments.html  list_shop.html  sidebar.html
templates/forms/: Readme.txt
templates/includes/: footer.html  fwsrg.html  nav.html  question-modal.html
templates/main-page/: about.html  contacts.html  hero.html  news.html  partners-detail.html  partners.html  services.html
templates/misc/: 400.html  403.html  404.html  500.html
templates/news/: category_news_list.html  news_detail.html  news_list.html  search_results.html
templates/projects/: project_detail.html  project_list.html
templates/questions/: create_question.html  email.html  email.txt
templates/services/: service-item.html
(+70 files in other folders)
