[tool.poetry]
name = "club_rusjet"
version = "0.1.0"
description = ""
authors = ["Konstantin Raikhert <raikhert13@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.10"
Django = "^4.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
